feat: initial implementation of RenderCache (#75)
* Add a scene for testing RenderCache
* Remove IDIsposable from StreamingImageSequencePreview. Unused
* Depend on editorcoroutines
* Use PlayableAsset's time to control the caching instead of director
* Add clipCaps.None for RenderCachePlayableAsset
* Display folder selector in the GUI of RenderCacheCreator
* Set the Timelineclip of RenderCachePlayableAsset during onCreate
* Show the progress of rendering the cache in game view
* Can cancel the process to cache render results
* Check if the assigned camera is active before rendering cache
* Show capture resolution

Others
* Add post processing in the test project

Utilities:
* Find Timeline asset's director using FindObjects
* Add MathUtility to calculate the number of digits
* Add a utility function to delete asset

--- a/StreamingImageSequence~/Packages/manifest.json
+++ b/StreamingImageSequence~/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.vscode": "1.2.0",
     "com.unity.package-validation-suite": "0.9.1-preview",
+    "com.unity.postprocessing": "2.3.0",
     "com.unity.quicksearch": "1.5.0",
     "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "2.0.1",
